correcion de la cadena de conexion para la db

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-QECQKU8,1433;Database=TiendaMicroserviciosAutorApi;User ID=sa;Password=1234;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=TiendaMicroserviciosAutorApi.mssql.somee.com;Database=TiendaMicroserviciosAutorApi;User Id=DanielCT_SQLLogin_1;Password=b9n4lwa3xh;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
